--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
+  <h1>Test Domain Only</h1>
+  <ul>
+    <li>CNAME set to test3.clepyd.org at 19:07 on 10March2020</li>
+    <li>DNS CNAME record for test3.clepyd.org set at 19:18 on 10March2020</li>
+    <li>dig test3.clepyd.org at 19:21 on 10March2020 returns clepyladies.github.io. (2 A name records)</li>
+    <li>TTL on NS cache is 24 hours (for all 4 NS) - WAIT UNTIL 11MARCH2020</li>
+  </ul>
+    Check if <a href='subdir/index.html'>this subpage</a> works.
+</body>
+</html>
