--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <ul>
     <li>CNAME set to test3.clepyd.org at 19:50 on 10March2020</li>
     <li>DNS CNAME record for test3.clepyd.org set at 19:51 on 10March2020</li>
-    <li>dig test3.clepyd.org at 19:21 on 10March2020 returns clepyladies.github.io. (2 A name records)</li>
+    <li>dig test3.clepyd.org at 19:55 on 10March2020 returns clepyladies.github.io. (4 A name records)</li>
+    <li>TTL on GitHub Pages NS cache is 1 hour (for all 4 NS) - WAIT UNTIL 9PM</li>
     <li>TTL on NS cache is 24 hours (for all 4 NS) - WAIT UNTIL 11MARCH2020</li>
   </ul>
     Check if <a href='subdir/index.html'>this subpage</a> works.
